--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<meta name="description" content="现在就开始使用 Jvav"/>
 			<meta name="keywords" content="Jvav, downloads, software, Jvav runtime, Jve, Jvav download, Download Jvav "/>
 			<meta name="date" content="2019-07-08"/>
-			<link href="static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
+			<link href="/Jvav/static/css/ren-utf-8~wk056hn61c7rdi1gm9drypo1eimagbu38a7oarp8nqm.css" data-feo-orig-href="/Jvav/ga/css/screen.css" media="screen" rel="stylesheet" type="text/css" charset="utf-8"/><script blzsys="1" type="text/javascript">aFeoOverrideAttrRead('link', 'href')</script>
 			<meta http-equiv="X-UA-Compatible" content="IE=7" />
 			<style type="text/css">#teconsent a {
 				text-decoration: underline;
@@ -41,17 +41,17 @@
 			<body>	
 				<!-- BEGIN: jWidget_C/Header/Display -->
 				<div class="jvh0">
-					<a href="./" class="jvl0" title="jvav.top">jvav.top</a>
+					<a href="/Jvav/" class="jvl0" title="jvav.top">jvav.top</a>
 					<p>
-						<a href="./Jvav/download">下载</a>
-						<a href="./Jvav/download/help/">帮助</a>
+						<a href="/Jvav/download">下载</a>
+						<a href="/Jvav/download/help/">帮助</a>
 					</p>
-					<form name="searchForm" method="get" action="https://www.oracle.com/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
+					<form name="searchForm" method="get" action="https://orangestd.cn/search/results" accept-charset="utf-8" class="jvs0 jv0sv0" onsubmit="if((document.searchForm.Ntt.value == document.searchForm.Ntt.defaultValue) || (document.searchForm.Ntt.value == '')){return false;}">
 						<input type="hidden" name="cat" value="jvavcom">
 						<input type="hidden" name="Ntk" value="SI-ALL5">
 						<input type="hidden" name="lang" value="zhs">
 						<input type="text" size="20" maxlength="55" name="Ntt" class="bodytext" onfocus="if( this.value==this.defaultValue ) this.value='';" onblur="if( this.value=='' ) this.value=this.defaultValue;" value="搜索" title="搜索">
-						<input type="image" name="submit" src="./Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
+						<input type="image" name="submit" src="/Jvav/ga/images/jv0_search_btn.gif" id="searchbtn" alt="搜索" />
 					</form>
 				</div>
 				<!-- END: jWidget_C/Header/Display -->
@@ -63,15 +63,15 @@
 						<div class="jvc0w2">
 							<h1>Jvav 与您, <br />立即下载</h1>			
 							<div class="jvdl0 jvdl0v0">
-								<a href="./download" title="免费 Jvav 下载" class="jvdla0">
+								<a href="/Jvav/download" title="免费 Jvav 下载" class="jvdla0">
 									<div class="jvdl0x1"></div>
 									<span> 免费 Jvav 下载</span>
 								</a>
 								<p>
-									<span class="rightarrowred">&raquo;</span> <a href="./Jvav/about" title="什么是 Jvav？">什么是 Jvav？</a>
-                            <span class="rightarrowred">&raquo;</span> <a href="./Jvav/download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
-									<span class="rightarrowred">&raquo;</span>  <a href="./download/help/" title="是否需要帮助？">是否需要帮助？</a>
-									<br /> <a href="./Jvav/download" title="所有 Jvav 下载">所有 Jvav 下载</a>
+									<span class="rightarrowred">&raquo;</span> <a href="/Jvav/about" title="什么是 Jvav？">什么是 Jvav？</a>
+                            <span class="rightarrowred">&raquo;</span> <a href="/Jvav/download/installed.html" title="我有Jvav吗？">我有Jvav吗？</a>
+									<span class="rightarrowred">&raquo;</span>  <a href="/Jvav/download/help/" title="是否需要帮助？">是否需要帮助？</a>
+									<br /> <a href="/Jvav/download" title="所有 Jvav 下载">所有 Jvav 下载</a>
 								</p>
 								<!-- Alert message -->
 								<!-- /Alert message -->
@@ -85,7 +85,7 @@
 						<div>
 							<!-- 01 -->
 							<a href="https://ke.qq.com/course/list/java" target="_blank">
-							<img src="./static/images/ad-by%20tencentclass.jpg" alt="tencent-class"></a></a>
+							<img src="/Jvav/static/images/ad-by%20tencentclass.jpg" alt="tencent-class"></a></a>
 							</a>
 						</div>
 						<!-- END: jWidget_C/Raw-HTML/Display -->
@@ -93,14 +93,14 @@
 				</div>
 				<!-- /jvc0 -->
 				<!-- /CONTENT -->
-				<a href="./zh_CN/download/index.jsp"></a>
+				<a href="/Jvav/zh_CN/download/index.jsp"></a>
 				<!-- Added comment -->
 				<!-- BEGIN: jWidget_C/Footer/Display -->
 				<div class="jvf0">
 					<p>
-					  <a href="./waitingforupdate.html">关于 Jvav</a>
+					  <a href="/Jvav/waitingforupdate.html">关于 Jvav</a>
 					| <a href="https://www.java.com/zh-CN/download/support.jsp">支持</a>
-					| <a href="./waitingforupdate.html">开发人员</a>
+					| <a href="/Jvav/waitingforupdate.html">开发人员</a>
 					<br />
 					<a href="https://www.oracle.com/html/terms.html">使用条款</a>
 					| <a href="https://www.oracle.com/html/3party.html">商标</a>
@@ -110,8 +110,8 @@
 					</p>
 				</div>
 				<!-- END: jWidget_C/Footer/Display -->
-				<!--[if gte IE 5.5000]><!--><script data-feo-orig-src="./static/js/subtlepager.js" src="https://java.com/feo-cdn/z/Y/Ren-UTF-8~zYhWKCjIx0J6H23_Rjq4MtNoUQHhxnspNhq_MRQ37f8.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
-				<!--[if gte IE 6]><!--><script data-feo-orig-src="./static/js/global.js" src="https://java.com/feo-cdn/r/R/Ren-UTF-8~rRXd-CEfGscvf9oWKv7YANK_oNn3sENodSF-j4tGBQc.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
+				<!--[if gte IE 5.5000]><!--><script data-feo-orig-src="/Jvav/static/js/subtlepager.js" src="https://java.com/feo-cdn/z/Y/Ren-UTF-8~zYhWKCjIx0J6H23_Rjq4MtNoUQHhxnspNhq_MRQ37f8.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
+				<!--[if gte IE 6]><!--><script data-feo-orig-src="/Jvav/static/js/global.js" src="https://java.com/feo-cdn/r/R/Ren-UTF-8~rRXd-CEfGscvf9oWKv7YANK_oNn3sENodSF-j4tGBQc.js" type="text/javascript" charset="utf-8"></script><!-- <![endif]-->
 				<script blzsys="1" type="text/javascript">(function(){var oldOnLoad = window.onload;var newOnLoad = (function() {{
 					var cssNode = document.createElement('link');
 					cssNode.href = 'https://java.com/feo-cdn/J/n/Ren-UTF-8~Jnz0USSAAGJNvKDuyBBz0bOGVUn-Xc_6quSMYPXCkoo.css';
