--- a/download/index.html
+++ b/download/index.html
@@ -85,19 +85,19 @@
 					<br />
 					<!--  jvdl0 Download Component -->
 					<div class="jvdl0 jvdl0v0">
-						<a href="/Jvav/sources/Jvav114514u1919810.exe" class="jvdla0">
+						<a href="/Jvav/download/sources/Jvav114514u1919810.exe" class="jvdla0">
 							<div class="jvdl0x1"></div>
 							<span>
 								免费 Jvav 下载 (For Windows)
 							</span>
 						</a>
-						<a href="/Jvav/sources/jvavlinux.zip" class="jvdla0">
+						<a href="/Jvav/download/sources/jvavlinux.zip" class="jvdla0">
 							<div class="jvdl0x1"></div>
 							<span>
 								免费 Jvav 下载 (For Linux)
 							</span>
 						</a>
-						<a href="/Jvav/sources/jvavmac.zip" class="jvdla0">
+						<a href="/Jvav/download/sources/jvavmac.zip" class="jvdla0">
 							<div class="jvdl0x1"></div>
 							<span>
 								免费 Jvav 下载 (For macOS)
